# aklanon-stemmer

./: README.md  pyproject.toml  requirements.txt
src/aklstemmer/: __init__.py  stem.py  stemmer.py
src/aklstemmer/helpers/: affixes.py  words.py
src/aklstemmer/resources/affixes/: infixes_notes.md  prefixes.txt  prefixes_notes.md  suffixes.txt  suffixes_notes.md
tests/: test_stemmer_functions.py  test_stemmer_helpers.py
tests/accuracy/: examples.csv  results.csv  test_stemmer_accuracy.py
