[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aklstemmer"
dynamic = ["version"]
description = "A library for Aklanon word stemming."
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Andrian Lloyd Maagma", email = "maagmaandrian@gmail.com"}
]
keywords = ["stemmer", "aklanon", "affix removal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "nltk>=3.8.1",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = ["twine>=5.1.1"]
test = ["pytest>=8.3.2", "mypy>=1.11.0"]

[project.urls]
homepage = "https://github.com/andrianllmm/aklstemmer"
issues = "https://github.com/andrianllmm/aklstemmer/issues"

[tool.setuptools]
package-data = {"aklstemmer" = ["resources/*.txt", "resources/affixes/*.txt"]}

[tool.setuptools.dynamic]
version = {attr = "aklstemmer.__version__"}
